--- a/mysqldb-with-DR/cm_pod_tools.yaml
+++ b/mysqldb-with-DR/cm_pod_tools.yaml
@@ -9,14 +9,14 @@ data:
         source_directory=/var/lib/mysql_backup
         backup_path=$source_directory/backup/$backup_name
         mkdir -p $backup_path
-        mysqldump "$DATABASE_NAME" --single-transaction --quick --lock-tables=false -u root -p"$MYSQL_ROOT_PASSWORD" > $backup_path/backup_dump.sql
+        mysqldump --all-databases --single-transaction --quick --lock-tables=false -u root -p"$MYSQL_ROOT_PASSWORD" > $backup_path/backup_dump.sql
         ## Cleanup older backup folders if more than 10 backups is present
-        ls -dt $source_directory/backup/*/ | sed -e '1,10d' | xargs  rm -rf
+        ls -dt $source_directory/backup/*/ | sed -e '1,36d' | xargs  rm -rf
     pod_init.sh: |
         #!/bin/bash
         apt-get update && apt-get install cron netcat -y
         # Configure backup script to cron
-        (crontab -l 2>/dev/null; echo "*/5 * * * * /pod_tools/pod_backup.sh") | crontab -
+        (crontab -l 2>/dev/null; echo "0 * * * * /pod_tools/pod_backup.sh") | crontab -
         #Start the Cron service
         /usr/sbin/cron start
         ## Attempting Pod restore
